[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Scenes/Cat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Mouse.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Dog.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scripts/Demo.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/Yard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Scenes/Fence.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 120 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 8 )

[sub_resource type="CapsuleShape2D" id=4]
height = 36.0

[node name="Demo" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Yard" parent="." instance=ExtResource( 5 )]

[node name="OuterWalls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="LeftWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( -155, 0 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 155, 0 )
shape = SubResource( 1 )

[node name="UpperWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 0, -105 )
shape = SubResource( 2 )

[node name="LowerWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 0, 120 )
shape = SubResource( 2 )

[node name="Stairs" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 0, -96 )
shape = SubResource( 3 )

[node name="Cat" parent="." instance=ExtResource( 1 )]

[node name="Mouse" parent="." instance=ExtResource( 2 )]
position = Vector2( -55, 56 )

[node name="Dog" parent="." instance=ExtResource( 3 )]
position = Vector2( -140, -70 )

[node name="Fence" parent="." instance=ExtResource( 6 )]
z_index = 1

[node name="Stairs" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Area" type="CollisionShape2D" parent="Stairs"]
position = Vector2( 0, -91 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true
[connection signal="caught_mouse" from="Cat" to="." method="caught_mouse"]
[connection signal="bit_cat" from="Dog" to="." method="game_over"]
[connection signal="body_entered" from="Stairs" to="." method="drop_mouse"]
