[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Scenes/Cat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Droid_normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Scenes/Lives.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scripts/Demo.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/Yard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Scenes/Fence.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 120 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 1 )

[sub_resource type="CapsuleShape2D" id=3]
height = 36.0

[node name="Level" type="Node2D"]
script = ExtResource( 4 )
mice = 3

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Yard" parent="." instance=ExtResource( 5 )]

[node name="OuterWalls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="LeftWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( -155, 0 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 155, 0 )
shape = SubResource( 1 )

[node name="UpperWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 0, -105 )
shape = SubResource( 2 )

[node name="LowerWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 0, 120 )
shape = SubResource( 2 )

[node name="Cat" parent="." instance=ExtResource( 1 )]

[node name="Fence" parent="." instance=ExtResource( 6 )]
z_index = 1

[node name="Stairs" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Area" type="CollisionShape2D" parent="Stairs"]
position = Vector2( 0, -91 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="Pause" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -9.5
margin_right = 27.5
margin_bottom = 9.5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" parent="." instance=ExtResource( 3 )]
position = Vector2( -150, -118 )
[connection signal="caught_mouse" from="Cat" to="." method="caught_mouse"]
[connection signal="drop_mouse" from="Cat" to="." method="leave_mouse"]
[connection signal="body_entered" from="Stairs" to="." method="drop_mouse"]
